Started implementation of workflow for parameter definitions.

--- a/KalypsoUIRRM/plugin.properties
+++ b/KalypsoUIRRM/plugin.properties
@@ -5,6 +5,16 @@ command.name.0 =Landuse
 command.name.1 = Pedology Data
 command.name.2 = Geology Data
 command.name.3 = Create Hydrotopes
+
+org.kalypso.model.rrm.parameterDefinition.name=Parameter Definitions
+org.kalypso.model.rrm.parameterDefinition.description=
+org.kalypso.model.rrm.snowDefinition.name=Snow
+org.kalypso.model.rrm.snowDefinition.description=
+org.kalypso.model.rrm.soilDefinition.name=Soil
+org.kalypso.model.rrm.soilDefinition.description=
+org.kalypso.model.rrm.landuseDefinition.name=Landuse
+org.kalypso.model.rrm.landuseDefinition.description=
+
 org.kalypso.model.rrm.modelConstruction.name=Model Construction
 org.kalypso.model.rrm.modelConstruction.description=Task for editing the basic model layout
 org.kalypso.model.rrm.editNetRelations.name=Edit Net Relations
