Implemented hydrotope workflow

--- a/KalypsoUIRRM/plugin.properties
+++ b/KalypsoUIRRM/plugin.properties
@@ -6,6 +6,9 @@ command.name.1 = Pedology Data
 command.name.2 = Geology Data
 command.name.3 = Create Hydrotopes
 
+org.kalypso.model.rrm.timeseriesManagement.name=Timeseries
+org.kalypso.model.rrm.timeseriesManagement.description=Timeseries
+
 org.kalypso.model.rrm.parameterDefinition.name=Parameter Definitions
 org.kalypso.model.rrm.parameterDefinition.description=
 org.kalypso.model.rrm.snowDefinition.name=Snow
@@ -21,6 +24,14 @@ org.kalypso.model.rrm.editNetRelations.name=Edit Net Relations
 org.kalypso.model.rrm.editNetRelations.description=Edit the relation between model elements
 org.kalypso.model.rrm.editNetElements.name=Edit Net Elements
 org.kalypso.model.rrm.editNetElements.description=Edit the elements the model consists of
+org.kalypso.model.rrm.hydrotopes.name=Hydrotopes
+org.kalypso.model.rrm.hydrotopes.description=Hydrotopes
+
+org.kalypso.model.rrm.catchmentModels.name=Catchment Models
+org.kalypso.model.rrm.catchmentModels.description=Catchment Models
+org.kalypso.model.rrm.simulationManagement.name=Simulation Management
+org.kalypso.model.rrm.simulationManagement.description=Simulation Management
+
 NewWizard.name=KalypsoHydrology Model
 Category.name=Rainfall-Runoff Model
 
