--- a/trunk/KalypsoUIRRM/plugin.properties
+++ b/trunk/KalypsoUIRRM/plugin.properties
@@ -26,6 +26,8 @@ org.kalypso.model.rrm.editNetElements.name=Edit Net Elements
 org.kalypso.model.rrm.editNetElements.description=Edit the elements the model consists of
 org.kalypso.model.rrm.hydrotopes.name=Hydrotopes
 org.kalypso.model.rrm.hydrotopes.description=Hydrotopes
+org.kalypso.model.rrm.completeNetElements.name=Complement Model Parameters
+org.kalypso.model.rrm.completeNetElements.description=Complement Model Parameters
 
 org.kalypso.model.rrm.catchmentModels.name=Catchment Models
 org.kalypso.model.rrm.catchmentModels.description=Catchment Models
