--- a/trunk/KalypsoUIRRM/plugin.xml
+++ b/trunk/KalypsoUIRRM/plugin.xml
@@ -512,6 +512,7 @@
             <command id="org.kalypso.model.rrm.editNetElements" name="%org.kalypso.model.rrm.editNetElements.name" description="%org.kalypso.model.rrm.editNetElements.description" />
             <command id="org.kalypso.model.rrm.editNetRelations" name="%org.kalypso.model.rrm.editNetRelations.name" description="%org.kalypso.model.rrm.editNetRelations.description" />
             <command id="org.kalypso.model.rrm.hydrotopes" name="%org.kalypso.model.rrm.hydrotopes.name" description="%org.kalypso.model.rrm.hydrotopes.description" />
+            <command id="org.kalypso.model.rrm.completeNetElements" name="%org.kalypso.model.rrm.completeNetElements.name" description="%org.kalypso.model.rrm.completeNetElements.description" />
 
             <command id="org.kalypso.model.rrm.catchmentModels" name="%org.kalypso.model.rrm.catchmentModels.name" description="%org.kalypso.model.rrm.catchmentModels.description" />
 
@@ -533,6 +534,7 @@
             <image commandId="org.kalypso.model.rrm.landuseDefinition" icon="icons/parameters/landuse.png"/>
             
             <image commandId="org.kalypso.model.rrm.hydrotopes" icon="icons/hydrotope/hydrotope.png"/>
+            <image commandId="org.kalypso.model.rrm.completeNetElements" icon="icons/parameters/parameters.gif"/>
 
             <image commandId="org.kalypso.model.rrm.catchmentModels" icon="icons/cm/catchmentModelsView.png"/>
             
@@ -551,6 +553,7 @@
       <handler class="org.kalypso.ui.rrm.internal.modelConstruction.EditNetElementsTaskHandler" commandId="org.kalypso.model.rrm.editNetElements"/>
       <handler class="org.kalypso.ui.rrm.internal.modelConstruction.EditNetRelationsTaskHandler" commandId="org.kalypso.model.rrm.editNetRelations"/>
       <handler class="org.kalypso.ui.rrm.internal.hydrotops.HydrotopesTaskHandler" commandId="org.kalypso.model.rrm.hydrotopes"/>
+      <handler class="org.kalypso.ui.rrm.internal.modelConstruction.CompleteNetElementsTaskHandler" commandId="org.kalypso.model.rrm.completeNetElements"/>
       
       <handler class="org.kalypso.ui.rrm.internal.cm.view.CatchmentModelsTaskHandler" commandId="org.kalypso.model.rrm.catchmentModels"/>
       <handler class="org.kalypso.ui.rrm.internal.simulations.SimulationManagementTaskHandler" commandId="org.kalypso.model.rrm.simulationManagement"/>
