Work on 'complete model' workflow

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages.properties
@@ -1,5 +1,5 @@
 channel.gft.commmonparameters=Common Options
-rhbchannel.gft.rhbparameters=Retention Basin - Required Parameters
+rhbchannel.gft.rhbparameters=Retention Basin - Parameters
 rhbchannel.gft.rhboptionalparameters=Retention Basin - Optional Parameters
 rhbchannel.gft.rhbvalidatelabel=Validation
 rhbchannel.gft.rhbvalidatetooltip=Validation of WVQ-Relation
