--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages.properties
@@ -32,6 +32,7 @@ control.gft.simulation=Simulation Management
 control.gft.syntheticPrecipitation=Synthetic precipitation events
 
 thiessen.gmt.stations=Timeseries
+idw.gmt.stations=Timeseries
 
 modelConstruction.gft.group.commonProperties=Common Properties
 modelConstruction.gft.group.net=Net Connections
