--- a/trunk/KalypsoModelNA/etc/schema/gml/parameter.properties
+++ b/trunk/KalypsoModelNA/etc/schema/gml/parameter.properties
@@ -53,7 +53,7 @@ rrmParam_SoilLayerParameter_rrmParam_xtief_tooltip=Thickness of the soil horizon
 rrmParam_SoilLayer_description=A soil layer is part of the whole soil profile.
 rrmParam_SoilLayer_label=${listProperty\:http\://www.opengis.net/gml\#name;0}
 rrmParam_SoilLayer_rrmParam_typbf0_label=Initial Soil Moisture
-rrmParam_SoilLayer_rrmParam_typbf0_tooltip=Initial soil moisture [-]
+rrmParam_SoilLayer_rrmParam_typbf0_tooltip=Initial Soil Moisture (0-1) [-]
 rrmParam_SoilLayer_rrmParam_typbfm_label=Maximal Pores Volume
 rrmParam_SoilLayer_rrmParam_typbfm_tooltip=Maximal pores volume [mm/dm]
 rrmParam_SoilLayer_rrmParam_typfk_label=Field Capacity
