Introduced 'calibration' workflow task

--- a/KalypsoUIRRM/plugin.xml
+++ b/KalypsoUIRRM/plugin.xml
@@ -517,6 +517,8 @@
 
             <command id="org.kalypso.model.rrm.catchmentModels" name="%org.kalypso.model.rrm.catchmentModels.name" description="%org.kalypso.model.rrm.catchmentModels.description" />
 
+            <command id="org.kalypso.model.rrm.editCalibration" name="%org.kalypso.model.rrm.editCalibration.name" description="%org.kalypso.model.rrm.editCalibration.description" />
+
             <command id="org.kalypso.model.rrm.simulationManagement" name="%org.kalypso.model.rrm.simulationManagement.name" description="%org.kalypso.model.rrm.simulationManagement.description"/>
 
 			<!-- non workflow -->
@@ -539,6 +541,8 @@
 
             <image commandId="org.kalypso.model.rrm.catchmentModels" icon="icons/cm/catchmentModelsView.png"/>
             
+            <image commandId="org.kalypso.model.rrm.editCalibration" icon="icons/calibration/calibration.png"/>
+
             <image commandId="org.kalypso.model.rrm.simulationManagement" icon="icons/simulations/simulation.gif"/>
             
             <image commandId="org.kalypso.model.rrm.simulationManagement.refreshSimulations" icon="icons/simulations/refreshSimulations.gif"/>
@@ -557,6 +561,7 @@
       <handler class="org.kalypso.ui.rrm.internal.modelConstruction.CompleteNetElementsTaskHandler" commandId="org.kalypso.model.rrm.completeNetElements"/>
       
       <handler class="org.kalypso.ui.rrm.internal.cm.view.CatchmentModelsTaskHandler" commandId="org.kalypso.model.rrm.catchmentModels"/>
+      <handler class="org.kalypso.ui.rrm.internal.calibration.EditCalibrationTaskHandler" commandId="org.kalypso.model.rrm.editCalibration"/>
       <handler class="org.kalypso.ui.rrm.internal.simulations.SimulationManagementTaskHandler" commandId="org.kalypso.model.rrm.simulationManagement"/>
       <handler class="org.kalypso.ui.rrm.internal.simulations.RefreshSimulationsTaskHandler" commandId="org.kalypso.model.rrm.simulationManagement.refreshSimulations">
          <enabledWhen>
