--- a/trunk/KalypsoUIRRM/plugin.properties
+++ b/trunk/KalypsoUIRRM/plugin.properties
@@ -20,17 +20,21 @@ org.kalypso.model.rrm.landuseDefinition.description=
 
 org.kalypso.model.rrm.modelConstruction.name=Model Construction
 org.kalypso.model.rrm.modelConstruction.description=Task for editing the basic model layout
-org.kalypso.model.rrm.editNetRelations.name=Edit Net Relations
+org.kalypso.model.rrm.editNetRelations.name=Net Relations
 org.kalypso.model.rrm.editNetRelations.description=Edit the relation between model elements
-org.kalypso.model.rrm.editNetElements.name=Edit Net Elements
+org.kalypso.model.rrm.editNetElements.name=Net Elements
 org.kalypso.model.rrm.editNetElements.description=Edit the elements the model consists of
 org.kalypso.model.rrm.hydrotopes.name=Hydrotopes
 org.kalypso.model.rrm.hydrotopes.description=Hydrotopes
-org.kalypso.model.rrm.completeNetElements.name=Complement Model Parameters
+org.kalypso.model.rrm.completeNetElements.name=Model Parameters
 org.kalypso.model.rrm.completeNetElements.description=Complement Model Parameters
 
 org.kalypso.model.rrm.catchmentModels.name=Catchment Models
 org.kalypso.model.rrm.catchmentModels.description=Catchment Models
+
+org.kalypso.model.rrm.editCalibration.name=Calibration
+org.kalypso.model.rrm.editCalibration.description=Edit calibration parameters of the model
+
 org.kalypso.model.rrm.simulationManagement.name=Simulation Management
 org.kalypso.model.rrm.simulationManagement.description=Simulation Management
 
