--- a/trunk/KalypsoModelRCM/etc/schema/catchmentModel.properties
+++ b/trunk/KalypsoModelRCM/etc/schema/catchmentModel.properties
@@ -5,5 +5,5 @@ cm=org.kalypso.model.cm
 cm_LinearSumGenerator_label=${property:http://www.opengis.net/gml#description} (${property:org.kalypso.model.rcm.v2#parameterType})
 cm_LinearSumGenerator_cm_comment_label=Comment
 cm_LinearSumGenerator_cm_timestep_label=Timestep [min]
-cm_LinearSumGenerator_cm_timestamp_label=Timestamp [hh:mm] (daily values only)
+cm_LinearSumGenerator_cm_timestamp_label=Timestamp [hh:mm.Z] (daily values only)
 
