some (but not all) bugs fixed in ChecklistOfLinksFeatureControl, stubs for multi generators adjusted, i18n fixes

--- a/KalypsoModelRCM/plugin.xml
+++ b/KalypsoModelRCM/plugin.xml
@@ -76,6 +76,10 @@
             class="org.kalypso.model.rcm.internal.binding.FactorizedTimeseries"
             qname="{org.kalypso.model.cm}FactorizedTimeseries">
       </feature>
+      <feature
+            class="org.kalypso.model.rcm.internal.binding.MultiGenerator"
+            qname="{org.kalypso.model.rcm.v2}MultiGenerator">
+      </feature>
    </extension>
 
 </plugin>
