--- a/KalypsoModelProduct/plugin.properties
+++ b/KalypsoModelProduct/plugin.properties
@@ -18,7 +18,7 @@
 productName=Kalypso
 aboutText=Kalypso - Version {0}\n\
 \n\
-(c) Copyright 2011\n\
+(c) Copyright 2005 - 2012\n\
 Hamburg University of Technology\n\
 Department of River and Coastal Engineering\n\
 http://www.tuhh.de/wb\n\
