--- a/trunk/KalypsoModelProduct/about.ini
+++ b/trunk/KalypsoModelProduct/about.ini
@@ -1,6 +1,6 @@
 # This file is part of Kalypso
 #     
-# Copyright (c) 2010 by
+# Copyright (c) 2005 - 2012 by
 #
 # Björnsen Beratende Ingenieure GmbH, Koblenz, Germany (Bjoernsen Consulting Engineers), http://www.bjoernsen.de
 # Technische Universität Hamburg-Harburg, Institut für Wasserbau, Hamburg, Germany
