Changed gft and tables for calibration task

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages.properties
@@ -45,3 +45,5 @@ rhbchannel.modelConstruction.gft.group.additonalOutflow=Additional Outflow (opti
 
 catchment.modelConstruction.gft.group.groundwaterOutflow=Groundwater Outflow
 catchment.modelConstruction.gft.group.tiefenGW=Deep Groundwater
+
+editCalibration.gft.group.calibrationParameters=Calibration Parameters
